* mysimon - MySimon price comparison engine
* dhl - Track DHL packages
* usps - Track USPS packages
* abex - Track Airborne Express packages
* wpfr - Get an address from a name in France
* msda - Microsoft Discussion Archive search
* shack - Search the shacknews.com comments database (from Wolfgang Deutsch)
* dps - Search for the best DVD prices from several online merchants (from Steven J. Heil)

Modified Searches

* setiq - yet another cosmetic change (use of <div> rather than <a>)
* yg - Added /number switch for jumping directly to a message number in the archive
* &, gg /cache - Moved from 'Other' category to 'Search the Web'

Enhancements

* pagetemplate preference - set to "maximized.htm" to maximize results window; or set to any HTML
  page that sets up the browser window the way you want it for your results. 
* Fixed some descriptions in various searches; moved some searches to more appropriate categories
* User-defined searches can be added to a 'localsearches' subdirectory.  These will not be overwritten on upgrading.

Bug Fixes

* 


-- What's new for 3.1.3 (September 9, 2002)

Bug Fixes

* aliases.txt - corrected 2 aliases to reflect the change of searches names that occured in v 3.1.1

-- What's new for 3.1.2 (September 8, 2002)

Modified Searches
* bible - renamed to bg (Bible Gateway) to avoid English word "Bible"

Enhancements
* Installer fixed to delete old names for *.xml searches.
* Gg bug fixed where /directory would "stick" and apply to the next gg search.

-- What's new for 3.1.1 beta (September 6, 2002)

New Searches

* walmart - Search WalMart online.
* iep - Internet Encyclopedia of Philosophy (from Andrew Carpenter)
* sep - Stanford Encyclopedia of Philosophy (from Andrew Carpenter)
* encarta - Microsoft Encarta (from Andrew Carpenter)
* ep - Epinions (from Andrew Carpenter)
* wc - Get the time around the world at timeanddate.com (from John Bairen)
* jsexec - Execute a Javascript command
* jsref - Search for Javascript commands reference
